\name{minfinews}
\title{Minfi News}
\encoding{UTF-8}

\section{Version 1.1}{
  \itemize{
    \item Changed NAMESPACE file
  }
}

\section{Version 0.99}{
  \itemize{
    \item Initial release to Bioconductor.
    \item Added NEWS file.
    \item Bugfix to vignette.
    \item readIDAT is now exported by crlmm, implying that we can import
  this function through NAMESPACE.
  }
}