@@ -56,6 +56,7 @@ export(manifestNew, getManifest, getProbeData, getProbeInfo, getManifestInfo,
        getBeta, getM, dmpFinder, mdsPlot, plotCpg, preprocessRaw,
        normalize.illumina.control, bgcorrect.illumina, preprocessIllumina,
        detectionP, qcReport, controlStripPlot, densityBeanPlot, densityPlot,
-       read.450k, read.450k.sheet, read.450k.exp, logit2, ilogit2)
+       read.450k, read.450k.sheet, read.450k.exp, logit2, ilogit2,
+       MethylSet, RGChannelSet, RGChannelSetExtended)
 exportClasses(RGChannelSet, RGChannelSetExtended, MethylSet, IlluminaMethylationManifest)
 exportMethods(show, initialize)
